--- a/preamble.tex
+++ b/preamble.tex
@@ -36,7 +36,8 @@ vlined]{algorithm2e}
 
 
 \newcommand{\denom}{d} 
-\newcommand{\fsr}{\mathcal{R}}
+%\newcommand{\fsr}{\mathcal{R}}
+\newcommand{\fsr}{\mathsf{R}}
 
 \renewcommand{\S}{\mathcal{S}}
 \newcommand{\pp}{\mathsf{p}}
@@ -64,7 +65,7 @@ vlined]{algorithm2e}
 \crefname{question}{Question}{Questions}
 \crefname{convention}{Convention}{Conventions}
 \crefname{algorithm}{Algorithm}{Algorithms}
-\newcommand{\creflastconjunction}{, and\nobreakspace}
+%\newcommand{\creflastconjunction}{, and\nobreakspace}
 
  %theorem style environments
 \newtheorem{theorem}{Theorem}[section]
