Added one comment in Section 10

--- a/aip.tex
+++ b/aip.tex
@@ -2917,6 +2917,8 @@ $\delta_{\q}^e(\matA, \vv{u}) = \delta_{\q}^e(\collapse{\matA}, \collapse{\vv{u}
 
 \subsection{The main theorem}
 
+\todo[inline]{Daniel, please split this off here.}
+
 Having the necessary concepts and definitions in hand, we now turn to the proof of our main theorem, which extends \Cref{m-primary AIP: T} to arbitrary monomial matrices.
 
 \begin{lemma}\label{lem: upper bound for higher mu}
