--- a/aip.tex
+++ b/aip.tex
@@ -1419,11 +1419,6 @@ Below, we describe the relationship between collapses and notions associated to 
    Thus, the containment established in \Cref{collapse of mf and mc: P}(2) may be proper---in which case so is the one in (3), since every optimal point for $\LP(\collapse{\matA},\collapse{\vv{u}})$ is special for $(\collapse{\matA},\collapse{\vv{u}})$, due to the boundedness of $\collapse{\O}$.
 \end{example}
 
-\pedro[inline]{
-   I replaced the three results about liftings with one that is more general, and simplified the proof.
-   The original results are, for now, commented out.
-}
-
 Let $\N$ be the Newton polyhedron of a monomial matrix $\matA$ with $\numvars$ rows, and $\O$ a standard face of $\N$.
 Denote the collapsing along $\O$ by an overbar.
 As shown in \Cref{faces under collapsing: P}, every standard face of $\collapse{\N}$ is of the form $\collapse{\G}$, for some (unique) collapsible standard face $\G$ of $\N$.
@@ -1437,8 +1432,8 @@ We now show that we can lift a pair whose minimal face is $\collapse{\G}$ to one
    Then the following hold\textup:
    \begin{enumerate}[$(1)$]
       \item There exists a positive point $\vv{u}\in \ZZ^\numvars$  such that $\collapse{\vv{u}} = \vv{w}$ and $\mf(\matA,\vv{u}) = \G$.
-      \item If $\vv{v}$ is any positive point in $\ZZ^\numvars$ such that $\collapse{\vv{v}} = \vv{w}$, then $\mf(\matA,\vv{v}+k\canvec) = \G$ for every sufficiently large integer $k$.
-      \pedro{We could remove (2); it's only used to get (3)}
+      % \item If $\vv{v}$ is any positive point in $\ZZ^\numvars$ such that $\collapse{\vv{v}} = \vv{w}$, then $\mf(\matA,\vv{v}+k\canvec) = \G$ for every sufficiently large integer $k$.
+      % \pedro{We could remove (2); it's only used to get (3)}
       \item If $\vv{v}$ is a positive point in $\ZZ^\numvars$ such that $\collapse{\vv{v}} = \vv{w}$ and $\mf(\matA,\vv{v}) \subseteq \G$, then $\mf(\matA,\vv{v}+\canvec) = \G$.
    \end{enumerate}
 \end{proposition}
@@ -1459,70 +1454,9 @@ We now show that we can lift a pair whose minimal face is $\collapse{\G}$ to one
 
    Suppose $\vv{v}$ is a positive point of $\ZZ^\numvars$ such that $\collapse{\vv{v}} = \vv{w}$.
    For a sufficiently large integer $k$ we have $\vv{v} +k\canvec \ge  \vv{u}$, and arguing as above we see that $\lambda(\vv{v}+k\canvec) \in \ri\G$.
-   Thus, for all such $k$ we have $\mf(\matA,\vv{v}+k\canvec) = \G$, giving (2).
-   This and \Cref{cor: a property of minimal faces} give (3).
+   Thus, for all such $k$ we have $\mf(\matA,\vv{v}+k\canvec) = \G$.
+   This and \Cref{cor: a property of minimal faces} give~(2).
 \end{proof}
-
-% In their statements, $\matA$ is a monomial matrix, $\O$ is an unbounded standard face of the Newton polyhedron $\N$ of $\matA$, and overbars denote collapsing along~$\O$.
-
-% \begin{lemma}
-%    \label{lem: lifting pairs}
-%    % Let $\N$ be the Newton polyhedron associated to a monomial matrix~$\matA$.
-%    % Let $\O$ be a standard face of $\N$, and let an overbar denote the collapse along~$\O$.
-%    Consider a pair  $(\collapse{\matA}, \vv{w})$ with $\mf(\collapse{\matA}, \vv{w}) = \collapse{\O}$, and fix a pair $(\matA, \vv{u})$ with $\collapse{\vv{u}} = \vv{w}$.
-%    If we set $\L \coloneqq \mf(\matA, \vv{u})$, then $\O = \L$ if and only if $\rb(\O) \subseteq \rb(\L)$.
-% \end{lemma}
-
-% \begin{proof}
-% %   We will prove that if $\rb(\O) \subseteq \rb(\L)$, then $\O =\L$.
-%    Suppose  $\rb(\O) \subseteq \rb(\L)$, fix a point $\vv{c}$ defining $\O$ in $\N$, and set $\lambda = \degree(\matA,\vv{u})$.
-%    Then $\lambda^{-1} \vv{u} \in \L$, and so $\lambda^{-1} \vv{w} = \lambda^{-1} \collapse{\vv{u}} \in \collapse{\L}$.
-%    Since $\collapse{\L}$ is a face of $\collapse{\N}$ by \Cref{faces under collapsing: P},
-% %   and $\lambda = \degree(\collapse{\matA},\vv{w})$ by \Cref{collapse of mf and mc: P},
-%    the minimality of $\collapse{\O} = \mf(\collapse{\matA}, \vv{w})$ implies $\collapse{\O} \subseteq \collapse{\L}$, and invoking \Cref{faces under collapsing: P} again we conclude that $\O \subseteq \L$.
-%    On the other hand, we have 
-%    \[ \lambda = \degree(\collapse{\matA},\vv{w}) = \iprod{\collapse{\vv{c}}}{\vv{w}} = \iprod{\vv{c}}{\vv{u}} \]
-%    and as $\lambda^{-1} \vv{u} \in \L \subseteq \N$, the identity $\lambda = \iprod{\vv{c}}{\vv{u}}$ implies that $\lambda^{-1} \vv{u} \in \O$.
-%    Finally, the minimality of $\L = \mf(\matA, \vv{u})$ implies that $\L \subseteq \O$.
-% \end{proof}
-
-% \begin{proposition}
-%    \label{prop: lifting pairs}
-%    % Let $\N$ be the Newton polyhedron associated to a monomial matrix~$\matA$.
-%    % Let $\O$ be a standard unbounded face of $\N$, and let an overbar denote the collapse along~$\O$.
-%    Consider a pair  $(\collapse{\matA}, \vv{w})$ with $\mf(\collapse{\matA}, \vv{w}) = \collapse{\O}$.
-%    Then there exists a positive point $\vv{u}$ in the target lattice of $\matA$ such that $\collapse{\vv{u}} = \vv{w}$ and $\mf(\matA,\vv{u}) = \O$.
-% \end{proposition}
-
-% \begin{proof}
-%    Let $\vv{v}$ be a positive point in the target lattice of $\matA$ such that $\collapse{\vv{v}}=\vv{w}$.
-%    Consider a standard face $\L$ of $\N$ such that $\rb(\O) \not\subseteq \rb(\L)$.
-%    We start by showing that we can modify $\vv{v}$, producing another lift $\vv{u}$ of $\vv{w}$ so that $\mf(\matA,\vv{u}) \ne \L$.
-   
-%    Let $\vv{b}$ and $\defpt$ be points that define $\L$ and $\O$ in $\N$, and let $\vv{e}$ denote the sum of the standard basis vectors in $\rb(\O)$.
-%    The assumption on the recession basis of $\L$ implies that $\iprod{\vv{b}}{\vv{e}} \ne 0$.
-%    Let $k$ be a positive integer with
-%    \[ k > \frac{\iprod{\vv{c}}{\vv{v}} - \iprod{\vv{b}}{\vv{v}}}{\iprod{\vv{b}}{\vv{e}}}\]
-%    and set $\vv{u} = \vv{v} + k\vv{e}$.
-%    We then have
-%    \[\iprod{\vv{b}}{\vv{u}} = \iprod{\vv{b}}{\vv{v}} + k\iprod{\vv{b}}{\vv{e}} > \iprod{\vv{c}}{\vv{v}} = \iprod{\vv{c}}{\vv{u}} \]
-%    which, in view of the equivalence of \ref{new ip} and \ref{min} in \Cref{FT descriptions: P}, shows that $\mf(\matA,\vv{u})$ cannot be $\L$.
-
-%    Clearly, the integer $k$ used in the construction of the point $\vv{u}$ can be chosen to ensure that the minimal face of $(\matA,\vv{u})$ is \emph{none} of the finitely many standard faces $\L$ of $\N$ with $\rb(\O) \not\subseteq \rb(\L)$.
-%    With this choice of $k$, the recession basis of $\mf(\matA,\vv{u})$ contains $\rb(\O)$, and \Cref{lem: lifting pairs} shows that this minimal face must be $\O$.
-% \end{proof}
-
-% \begin{corollary}
-%    \label{cor: when the lift is almost there}
-%    Suppose $\mf(\collapse{\matA}, \vv{w}) = \collapse{\O}$, and let $\vv{u}$ be a positive point in the target lattice of $\matA$ such that $\collapse{\vv{u}} = \vv{w}$ and $\mf(\matA,\vv{u}) \subseteq \O$.
-%    Let $\canvec$ be the sum of the standard basis vectors in $\rb(\O)$.
-%    Then $\mf(\matA,\vv{u}+\canvec) = \O$.
-% \end{corollary}
-
-% \begin{proof}
-%    The proof of \Cref{prop: lifting pairs} shows that for a sufficiently large integer $k$ we have $\mf(\matA,\vv{u}+k\canvec) = \O$.
-%    The result then follows from \Cref{cor: a property of minimal faces}.
-% \end{proof}
 
 \begin{corollary}
    If $\denom$ is a universal denominator for a monomial matrix $\matA$, then~$\denom$ is a universal denominator for all collapses of $\matA$.
@@ -1630,9 +1564,6 @@ As a part of this, we call upon some basic notions from modular arithmetic.
 % Recall that since each row of $\collapse{\matA}$ is a row of $\matA$, the inequalities determined by $\collapse{\matA} \vv{h}  < \collapse{\matA} \tail{\vv{s}}_q$ are a subset of those in $\matA \vv{h}  < \matA \tail{\vv{s}}_q$.
 % Also note that because $\collapse{\matA}$ is a monomial matrix, the inequality $\collapse{\matA} \vv{h}  < \collapse{\matA} \tail{\vv{s}}_q$ imposes upper bounds on all coordinates of $\vv{h}$, and thus $\ip(\matA, \vv{u}, \vv{s}, q)$ has a well-defined value.
 
-\pedro[inline]{
-   In the next proposition, I gathered a couple of lemmas, the fact that $\ip$ has a well-defined value (which was mentioned in prose), and the feasibility of $\ip$ (not explicitly mentioned before). 
-}
 
 \begin{proposition}[Basic properties of $\ip$]
    \label{prop: basic properties of Theta}
@@ -1640,8 +1571,11 @@ As a part of this, we call upon some basic notions from modular arithmetic.
    Let $d$ be a denominator for the rational special point $\vv{s}$.
    Then the following hold\textup:
    \begin{enumerate}[$(1)$]
-      \item \label{item: Theta is feasible and has well-defined value}
-      $\ip(\matA,\vv{u},\vv{s},q)$ is feasible and has a well-defined value.
+      \item \label{item: Theta is feasible}
+      If $\vv{k}$ is feasible for $\IP(\matA,\vv{u},q)$, then $\vv{k} - \vv{s}q + \tail{\vv{s}}_q$ is feasible for $\ip(\matA,\vv{u},\vv{s},q)$.
+      In particular, $\ip(\matA,\vv{u},\vv{s},q)$ is feasible.
+      \item \label{item: Theta has well-defined value}
+      $\ip(\matA,\vv{u},\vv{s},q)$ has a well-defined value.
       \item \label{secondary-program-invariant-under-collapse: L}
       $\ip(\matA, \vv{u}, \vv{s}, q) = \ip(\collapse{\matA}, \collapse{\vv{u}}, \vv{s}, q)$.
       \item \label{secondary-program-invariant-depends-on-residue: L}
@@ -1650,8 +1584,8 @@ As a part of this, we call upon some basic notions from modular arithmetic.
 \end{proposition}
 
 \begin{proof}
-   \Cref{comparison: R} shows that any feasible point for $\IP(\matA,\vv{u},q)$ yields a feasible point for $\ip(\matA,\vv{u},\vv{s},q)$.
-   Because $\collapse{\matA}$ has nonzero columns, the inequality $\collapse{\matA} \vv{h}  < \collapse{\matA} \tail{\vv{s}}_q$ imposes upper bounds on all coordinates of $\vv{h}$, and thus $\ip(\matA,\vv{u},\vv{s},q)$ has a well-defined value.
+   The first claim in (1) was shown in \Cref{comparison: R}; since $\IP(\matA,\vv{u},q)$ is feasible, so is $\ip(\matA,\vv{u},\vv{s},q)$.
+   As $\collapse{\matA}$ has nonzero columns, the inequality $\collapse{\matA} \vv{h}  < \collapse{\matA} \tail{\vv{s}}_q$ imposes upper bounds on all coordinates of $\vv{h}$, and thus $\ip(\matA,\vv{u},\vv{s},q)$ has a well-defined value.
 
    \Cref{collapse of mf and mc: P} shows that $(\collapse{\matA}, \collapse{\vv{u}}, \vv{s}, q)$ is a monomial list and that $\mf(\collapse{\matA}, \collapse{\vv{u}}) = \collapse{\O}$.
    \Cref{cor: O bar is bounded} tells us that $\collapse{\O}$ is bounded, and so the collapse along $\collapse{\O}$ is the identity.
