More reorganization and small changes

--- a/preamble.tex
+++ b/preamble.tex
@@ -223,7 +223,7 @@ vlined]{algorithm2e}
 \newcommand{\compatible}{compatible}
 \newcommand{\smallcompatible}{small compatible}
 \newcommand{\verysmallcompatible}{very small compatible}
-\newcommand{\standard}{positive}
+\newcommand{\positive}{positive}
 
 %notes
 \usepackage[textwidth=3.3 cm,textsize=small,shadow
